<resources>
    <string name="app_name">Task</string>
    <string name="btn_registar">Registrar</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_entrar_google">Entrar com google</string>
    <string name="title_register">Registre-se</string>
    <string name="title_tarefas">Suas tarefas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail_valido">E-mail valido</string>
    <string name="password">Senha</string>
    <string name="temperatura">Temperatura:</string>
    <string name="adicionar_tarefa">Adicionar tarefa</string>
    <string name="adicionar">Adicionar</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="recuperar">Recuperar</string>
    <string name="digite_um_e_mail_valido">Digite um e-mail valido</string>
</resources>