<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_blue_2"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="50dp"
        />

    <EditText
        android:id="@+id/text_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail_valido"
        android:textColorHint="@color/color_blue_4"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        />

    <EditText
        android:id="@+id/text_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/color_blue_4"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/btn_confirm_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_registar"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/color_blue_3"
        />
</LinearLayout>