<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_blue_2"
    android:gravity="center"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/textLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="E-mail"
        android:textColorHint="@color/color_blue_4"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        />

    <EditText
        android:id="@+id/textLoginSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textColorHint="@color/color_blue_4"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/btnLoginEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_entrar"
        android:backgroundTint="@color/color_blue_3"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"

        />

    <Button
        android:id="@+id/btnLoginRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_registar"
        android:backgroundTint="@color/color_blue_3"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        />




</LinearLayout>